Got my filters setup properly and fixed some more css. We are on the home stretch.

--- a/src/css/catppuccin-variables.css
+++ b/src/css/catppuccin-variables.css
@@ -1,4 +1,8 @@
 /* Variables */
+:root {
+    --transition-duration: .3s;
+}
+
 body.mocha {
   /* Mocha */
   --rosewater: #f5e0dc;
