--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -12,12 +12,11 @@ body {
   font-family: "Poppins", sans-serif;
   display: flex;
   justify-content: center;
-  transition: color 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out;
   background-color: var(--base);
   color: var(--text);
   min-height: 100%;
-  padding-bottom: 100px;
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
 }
 
 #root {
@@ -49,7 +48,8 @@ nav {
   z-index: 1000;
   background-color: var(--mantle);
   font-weight: bold;
-  transition: color 0.3s ease-in-out, background-color 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
 }
 
 nav ul {
@@ -67,7 +67,7 @@ nav li {
 .nav-link {
   color: var(--text);
   text-decoration: none;
-  transition: color 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out;
 }
 
 .nav-link:hover {
@@ -83,8 +83,7 @@ nav li {
 
 .total-number,
 .total-blocks-container {
-  transition: color 0.3s ease-in-out;
-  
+  transition: color var(--transition-duration) ease-in-out;
 }
 
 .displayed-colors {
@@ -121,7 +120,7 @@ nav li {
 
 .search-button i {
   font-size: 24px;
-  transition: color 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out;
   color: var(--text);
 }
 
@@ -142,13 +141,15 @@ nav li {
   flex-wrap: wrap;
   gap: 0px;
   justify-content: center;
+  margin-bottom: 50px;
+  margin-top: 50px;
 }
 
 .palette-route-container,
 .collection-route-container {
-  width: 80%;
-  margin-left: 10%;
-  margin-right: 10%;
+  width: 70%;
+  margin-left: 15%;
+  margin-right: 15%;
   text-align: center;
 }
 
@@ -168,7 +169,7 @@ nav li {
 }
 
 .theme-toggle i {
-  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out, transform var(--transition-duration) ease-in-out;
   width: 24px;
   height: 24px;
   font-size: 24px;
@@ -200,7 +201,7 @@ nav li {
   height: 8px;
   outline: none;
   border-radius: 6px;
-  transition: background 0.3s ease-in-out;
+  transition: background var(--transition-duration) ease-in-out;
   margin-right: 25px;
   background: var(--surface2);
   margin: 0;
@@ -210,7 +211,7 @@ nav li {
 
 #block-size-slider:hover::-webkit-slider-thumb,
 #block-size-slider:hover::-moz-range-thumb {
-  transform: scale(1.3);
+  transform: scale(1.6);
 }
 
 #block-size-slider::-webkit-slider-thumb,
@@ -219,7 +220,7 @@ nav li {
   height: 20px;
   border-radius: 6px;
   cursor: pointer;
-  transition: color 0.3s ease-in-out, transform 0.3s ease-in-out;
+  transition: color var(--transition-duration) ease-in-out, transform var(--transition-duration) ease-in-out;
   border: none;
   background: var(--text);
   box-sizing: border-box;
@@ -248,7 +249,8 @@ nav li {
   width: 150px;
   height: 150px;
   cursor: pointer;
-  transition: transform 0.2s ease-in-out, z-index 0s ease-in-out, box-shadow 0.2s ease-in-out, border 0.2s ease-in-out;
+  transition: transform 0.2s ease-in-out, z-index 0s ease-in-out,
+    box-shadow 0.2s ease-in-out, border 0.2s ease-in-out;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -332,4 +334,104 @@ nav li {
 
 .confirm-overwrite-dialog button:hover {
   background-color: var(--red);
+}
+
+/***************************************************/
+/*                                                 */
+/*               CHECKBOX STYLING                  */
+/*                                                 */
+/***************************************************/
+
+.checkbox-wrapper:hover .check {
+  stroke-dashoffset: 0;
+}
+
+.filters-container {
+  display: flex;
+  flex-direction: column;
+  position: fixed;
+  left: 4%;
+  top: 30%;
+  background-color: var(--mantle);
+  border-radius: 6px;
+  padding: 20px;
+  padding-bottom: 10px;
+  box-shadow: rgba(0, 0, 0, 0.12) 0px 1px 3px, rgba(0, 0, 0, 0.24) 0px 1px 2px;
+  transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
+}
+
+.checkbox-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 10px; /* Add some space between checkbox and label */
+  margin-bottom: 10px;
+  position: relative;
+  font-weight: bold;
+}
+
+.checkbox-wrapper .background {
+  fill: var(--surface0);
+  transition: ease all var(--transition-duration);
+  -webkit-transition: ease all var(--transition-duration);
+}
+
+.checkbox-wrapper .stroke {
+  fill: none;
+  stroke: var(--surface1);
+  stroke-miterlimit: 10;
+  stroke-width: 2px;
+  stroke-dashoffset: 100;
+  stroke-dasharray: 100;
+  transition: ease all var(--transition-duration);
+  -webkit-transition: ease all var(--transition-duration);
+}
+
+.checkbox-wrapper .check {
+  fill: none;
+  stroke: var(--surface1);
+  stroke-linecap: round;
+  stroke-linejoin: round;
+  stroke-width: 2px;
+  stroke-dashoffset: 22;
+  stroke-dasharray: 22;
+  transition: ease all var(--transition-duration);
+  -webkit-transition: ease all var(--transition-duration);
+}
+
+.checkbox-wrapper svg {
+  width: 40px; /* Set a fixed width for the SVG */
+  height: 40px; /* Set a fixed height for the SVG */
+}
+
+.checkbox-wrapper input[type="checkbox"] {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  margin: 0;
+  opacity: 0;
+  appearance: none;
+}
+
+.checkbox-wrapper input[type="checkbox"]:hover {
+  cursor: pointer;
+}
+
+.checkbox-wrapper input[type="checkbox"]:checked + svg .background {
+  fill: var(--pink);
+  transition: color var(--transition-duration) ease-in-out, background-color var(--transition-duration) ease-in-out;
+
+}
+
+.checkbox-wrapper input[type="checkbox"]:checked + svg + span {
+  color: var(--pink); /* Adjust this to your preferred pink color */
+}
+
+.checkbox-wrapper input[type="checkbox"]:checked + svg .stroke {
+  stroke-dashoffset: 0;
+}
+
+.checkbox-wrapper input[type="checkbox"]:checked + svg .check {
+  stroke-dashoffset: 0;
 }
